# discount-agent-sdd

./: .env.example  .gitignore  README.md  agent.py  cspell.json  logging_config.py  pyproject.toml  verifier.py
.github/workflows/: ci-main-pipeline.yml  pull-request.yml
specs/: discount_logic.md
tests/: conftest.py  test_discount_agent.py
tests/integration/: conftest.py  test_discount_agent_integration.py
tests/unit/: test_agent_unit.py
