[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "discount-agent-sdd"
version = "0.1.0"
description = "Spec-Driven Development demo for a discount approval agent."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "openai",
  "python-dotenv",
  "structlog",
]

[project.optional-dependencies]
dev = [
  "pytest",
]
